--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "firebase": "^8.6.8",
     "fs-extra": "3.0.1",
     "heroicons-react": "^1.4.1",
     "html-webpack-plugin": "2.29.0",
