--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.36",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.2"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.2",
+    "terser-webpack-plugin-legacy": "^1.2.5"
   },
   "jest": {
     "collectCoverageFrom": [
